modified:   home/index.htm 	modified:   resources/cityschema_includes.js

--- a/home/index.htm
+++ b/home/index.htm
@@ -85,7 +85,7 @@
     </p><p>As time moves on, we hope to engage with other interested parties to develop and share tools and workflows for using the metropolitan-scale city models with open-source workflows, including  ThreeJS, Blender and Cesium.
     
     </p>
-    <h2>Who?  Acknolwedgements</h2>
+    <h2 id="ack">Acknolwedgements</h2>
     <p>This project began at the Harvard Graduate School of Design around 1998 with data from the Massachusetts Geographic Information System.  Over the years it has received sponsorship, and collaborative support from the Harvard Center for Design Informatics, the Boston Redevelopment Authority, the City of Cambridge, Town of Brookline, The Open Geospatial Consortium,  The Massachusetts Institute of Technology Facilities Department, Harvard University Planning and Real Estate, Sasaki and Associates, Architects and many others.
     </p>
     
