modified:   model_collection/index.htm 	modified:   model_collection/model_collection.htm 	modified:   resources/cityschema_includes.js 	modified:   resources/repocat_includes.js 	modified:   submissions/index.htm 	modified:   submissions/submissions.htm 	renamed:    tile_grid/images/Bos3d_TileGrid_ref.jpg -> tile_scheme/images/Bos3d_TileGrid_ref.jpg 	renamed:    tile_grid/images/tall.jpg -> tile_scheme/images/tall.jpg 	renamed:    tile_grid/images/wide.jpg -> tile_scheme/images/wide.jpg 	renamed:    tile_grid/index.htm -> tile_scheme/index.htm 	renamed:    tile_grid/tile_grid.htm -> tile_scheme/tile_grid.htm

--- a/submissions/index.htm
+++ b/submissions/index.htm
@@ -86,7 +86,7 @@ Our model asset management system treats OBJ format as a primary asset which are
 
 <h2 id="georef">Context and Geo-Location</h2>
 <p>We need some means of verifying the placement of your model in the context of our existing city model.  This is tricky, since most modeling tools have trouble with geometry in very expansive coordinate systems that are used in state and local agencies.  The agency has developed a tiling and coordinate referencing scheme that bridges between design tools and GIS.  In short, keeping our tile frame in your model permits you to have your origin wherever works best in your project, but to re-register your model exports back and forth with the collaborative city model coordinate system. </p>
-    You can read all about it on our <a href="./tile_grid.htm#coordinates" target = "_new">Tile Grid and Coordinate System</a> page.  
+    You can read all about it on our <a href="./tile_scheme.htm#coordinates" target = "_new">Tile Grid and Coordinate System</a> page.  
     <ul>
         <li> if it is possible for you to submit your model using our Metro Boston 3D coordinate referencing system, that would be preferred.  If you have difficulties doing this, we would like to hear more about that. 
         <li>We know that you wil be working in a project-based coordinate system.  If shifting back to the Metro 3D Boston coordinate system is too much to ask, it could be very helpful to include the tile boundary in your model -- which would give us a dependable registration.   
