--- a/model_collection/index.htm
+++ b/model_collection/index.htm
@@ -136,7 +136,7 @@ The SketchUp format models preserve the unique Model_ID as the group name for ea
 <div id="coordsys"><!-- loaded from config.js. --></div>
 
 <script src="../resources/data_dictionary.js"></script>
-<div id="datadictionary"> <!--From data_dictionary.js loaded at top --> </div>
+<div id="datadictionary"> <p>This text should be replaced by the data dictionary<!--From data_dictionary.js loaded at top --> </div>
 
 
 </div> <!-- Closes #article div -->
