modified:   home/index.htm 	new file:   repocat/images/ModelFinder.jpg 	new file:   repocat/images/download_page.jpg 	modified:   repocat/index.htm 	modified:   resources/cityschema.css 	modified:   resources/cityschema_includes.js 	modified:   template/index.htm

--- a/repocat/index.htm
+++ b/repocat/index.htm
@@ -36,21 +36,51 @@
 <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">Introducing the Repository Catalog</h1>
-    <p>citySchema.org is a platform for sharing tools and templates for sharing a city-wide 3D model components among diverse tools including geographic information systems (GIS) and 3d modeling programs and tools for archival access and preservation.  The citySchema Repository Catalog is a means of publishing a city model as a single package that includes all of the model components along with the catalog information, feature level metadata and finding aids in a single data-set that may be accessed with a variety of tools. 
+    <p>citySchema.org is a platform for sharing tools and templates for sharing a city-wide 3D model components among diverse tools including geographic information systems (GIS), 3d modeling programs and tools for archival access and preservation.  The citySchema Repository Catalog is a means of publishing a city model as a single package that includes all of the model components along with the catalog information, feature level metadata and finding aids in a single data-set that may be accessed with a variety of tools. 
     </p>
+
+    <figure class="middle">
+      <img class="scaled" src="images/download_page.jpg">
+      <figcaption>Middle Figure</figcaption>
+    </figure>
+
+
+
+    <h3 id="principles">Guided by Sound Asset Management Principles</h3>
     <p>The design of the Repository Catalog is guided by the <a href="http://www.oais.info/" target="outboard"> International Standards Organization Reference Model for Open Archival Information Systems (OAIS)</a>.  OAIS is a convention for guiding information exchange activities so that the products are accessible and preservable over the long-term. 
     </p>
-    <p>The Repository / Catalog is designed make it easy for users to access city model assets.  The catalog repository can be easily be modified as a repository for city models covering other areas.  
+    <h3>Built to Leverage City Model Assets in Diverse Applications</h3> 
+    The Repository / Catalog is designed make it easy for users to access city model assets.  The catalog repository can be easily be modified as a repository for city models covering other areas.  
     </p>
-   <ul id="tour">
-     <li> Take a tour of <a href="https://cityschema.github.io/repository-catalog/catalog/index.htm" target="downloads">this full working demo created for the Boston Planning and Development agency</a>. 
-      <li>Jump to the <a href="https://cityschema.github.io/repository-catalog/catalog/doc_index.htm" target="downloads">Documentation Index</a> which explains a lot of the concepts about how we organize city models.
-      <li>Or you can <a href="https://github.com/CitySchema/repository-catalog" target="github">explore the same catalog as a simple file-system, which may be cloned from GitHub</a>. 
-    </ul>
-      <p>
-      The documentation on the github repository has instructions for taking a self-guided tour that explains how the Reopsitory/Catalog can be modified using simple html and javascript skills to package publish your own city model.
-      </p><p>  
-      In the coming days, this page will be expanded to provide more information on how your project can make use of the citySchema Repository Catalog to organize, share and preserve your city model assets.
+
+   <h3 id="web">Tour the Repository / Catalog as a Web Site</h3>
+   <p>In keeping with the OAIS Reference model, the Repository Catalog is a self-contained package of data and documentation designed to provide systematic access to all of the information necessary for using and preserving a collection of diverse city model assets.
+   </p><p>
+   Most of the features of the repo/catalog can be discovered through the <a href="https://cityschema.github.io/repository-catalog/catalog/index.htm" target="downloads"> Data Download Page</a></p>.  
+   </p><p>
+    <figure class="right">
+      <img class="scaled" src="images/ModelFinder.jpg">
+      <figcaption>Access Individual Building Models</figcaption>
+    </figure>
+
+  <h3 id="bldg_download">Web-End-points for Individual Building And Bridge Models</h3>
+  <p>Collaborators will find it easy to start their own models using the fully integrated tiled SketchUp format models.  However, we have learned that for on-going work, it is desirable to be able to discover and download individual building models that have been changed.  <a href="https://cityschema.github.io/repository-catalog/Bos3d_Tiled_Data/Bos3d_ModelCollection_OBJ/BOS_I_3_ModelCollection_OBJ/ModelCatalog/ModelFinder.htm" target = "downloads">Have a look at the tile-based individual building model Access</a>.
+  </p><p>
+  <h3 id="docs">Extensive User Documentation</h3>
+  <p>Power users and collaborators wil need to understand fundamental concepts of the model collection and its coordinate system.  Allof this information is built into the repository / catalog.  <a href="https://cityschema.github.io/repository-catalog/catalog/doc_index.htm" target="documentation">Check out the index to all of the built-in documenation .</a>
+  
+  <p>
+  <h3 id="off-line">Turn-Key Web Publishing or An Off-Line Data Store</h3>
+  <p>The Repository / Catalog provides a simple means of publishing the entire city model with its terrain and building model components on the web.  Because of its resilient, self-contained structure, it is also useful as an off-line data store that provides the same systematic fine-grained model access in an local file-system. 
+  </p>
+
+<h2 id="github">Explore and Clone your Own from GitHub!</h2>
+<p>The Archive Repository is based on a simple arrangement of  folders, simple html files, data files and a couple of javascript modules.  It is easy to understand and to modify to host your own city model collections. 
+</p><p>
+Visit the <a href="https://github.com/CitySchema/repository-catalog" target="github">citySchema Repository Catalog on GitHub</a> to
+  Explore our Boston demonstration as a simple file-system, which may be cloned from GitHub</a>. Text at the bottom of the git-hub page provides tips for understanding how the repository catalog can be customized for your city.
+
+
     <p>
     Thanks to the Boston Planning and Development Agency for sponsoring this project and for the use of their template for this demonstration!
     
