modified:   repocat/index.htm

--- a/repocat/index.htm
+++ b/repocat/index.htm
@@ -41,7 +41,7 @@
 
     <figure class="middle">
       <img class="scaled" src="images/download_page.jpg">
-      <figcaption>Middle Figure</figcaption>
+      <figcaption>A Self-Contained Web Publishing Scheme</figcaption>
     </figure>
 
 
