new file:   model_management/images/model_mgt_files.jpg 	modified:   model_management/index.htm 	modified:   resources/cityschema.css 	modified:   resources/cityschema_includes.js 	new file:   resources/images/fullscreenexit2.png 	new file:   resources/images/playpause2.png 	new file:   resources/images/prevnext.png 	new file:   resources/slideshow_pbc.css 	new file:   resources/slideshow_pbc.js 	modified:   template/index.htm 	new file:   template/indexbk.htm 	new file:   terrain/images/tall.jpg 	new file:   terrain/images/wide.jpg 	new file:   terrain/index.htm

--- a/model_management/index.htm
+++ b/model_management/index.htm
@@ -106,18 +106,20 @@
 
 <HR>
 
+  <!-- Institvte-->
 
   <h1 id="tour">Tour of the Model Management Workspace</h1>
 
   <p>A tour of the ModelCollectionMgt workflow folder is useful for orientation to the file organization.  It also introduces the main components of the workflow.  You can watch the tour on youtube (soon) or follow along with your local copy of the workspace available from github (soon).  
   </p>
   
-  <figure class="middle">
-    <img class="scaled" src="images/wide.jpg">
-    <figcaption>Figure 2: Model Management Workspace</figcaption>
-  </figure>
+ 
 
   <div class="tour">
+    <figure class="right">
+      <img class="scaled" src="images/model_mgt_files.jpg">
+      <figcaption>Figure 2: Model Management Workspace</figcaption>
+    </figure>
   <h3>Filesystem and Folders</h3>
   <p>The model management workspace demo is provided as a self-contained workspace with every tool and file accessible via relative path-names. In your environment, it may be beneficial to store multi-purpose resources in other places on your network file-system. 
   </p> 
