modified:   model_management/index.htm 	modified:   resources/cityschema.css 	modified:   template/index.htm 	modified:   template/indexbk.htm 	modified:   terrain/index.htm

--- a/model_management/index.htm
+++ b/model_management/index.htm
@@ -115,7 +115,7 @@
   
  
 
-  <div class="tour">
+  <div class="feature tour">
     <figure class="right">
       <img class="scaled" src="images/model_mgt_files.jpg">
       <figcaption>Figure 2: Model Management Workspace</figcaption>
@@ -183,7 +183,7 @@ New and edited models are always brought in through a Batch folder within the MO
       <figcaption>Figure 4: ArcGIS Pro Options</figcaption>
     </figure>
 
-    <div class="tour">
+    <div class="feature tour">
     <h3>Project Options</h3>
     <p>In the <b>Project</b> window under <b>Project > Current Settings</b> Notice that we have set the following:
       <li><b>Home Folder</b> is the <b>ModelCollection_Mgt_YYYYMMDD</b> folder that contains all of the resources listed above.  This setting gives you a handy means of jumping tothis folder inorder to find any of the resources in the project. 
@@ -210,7 +210,7 @@ New and edited models are always brought in through a Batch folder within the MO
   <img class="scaled" src="images/wide.jpg">
   <figcaption>Figure 5: 2D Layers Portrayed in the Map Pane</figcaption>
 </figure>
-<div class="tour"> 
+<div class="feature tour"> 
 <h3>2D Layers</h3>
   <ul>
     <li><b>DevLog_Pts: </b> The development log is a table that carries information related to the status of projects under review.  Each agency will have a different variation on this.  In Boston, this table keeps track of the status of each project after each meeting of the review board. It also contains the projectID and the URL for the project on the BostonBuilds web site. There is a lot of other useful information about projects, but those three fields are the ones that are most important for understanding which models may need to be promoted, demoted or superseded.
@@ -222,7 +222,7 @@ New and edited models are always brought in through a Batch folder within the MO
     </ul>
   </div>
 
-  <div class="tour">
+  <div class="feature tour">
     <h2>The 3D Scene</h2> 
     <p>The 3D scene and its table of contents is the hub of the ModelCollection_Mgt project all of the tools reference layers from this scene. It is also the view upon which all review and edit tasks are carried out. 
     </p>
@@ -436,7 +436,7 @@ New and edited models are always brought in through a Batch folder within the MO
       <h3>Model Editing</h3>
       <p>A common editing workflow comes into play when an existing model needs to be split to accommodate a new model of a proposed structure that will preserve part of the existing one. At the end of the process, you can have a new model that represents the portion if the existing structure that will return to the Active feature class.  And you may also end up with have a second new model that represents the "historical" portion of the original structure that is to be demolished.  As it happens, this process of model editing may be trickier and more time consuming than we would like.  
       </p>
-      <div class="funfact">
+      <div class="feature funfact">
       <h3>How the <b>Modified</b> Model Status Saves You Time</h3> 
         <p> 
       For model curators who are primarily future-oriented, there may not be a clear business case for spending half a day trying to neatly dissect both sides of this complex cutting procedure.  Asit happens, cutting models canbe very difficult -- especially when the models donot verify as being fully closed, or "wat6er tight."   
