--- a/terrain/index.htm
+++ b/terrain/index.htm
@@ -41,7 +41,7 @@
       <p>
       The citySchema Modular-Terrain-Mesh repository contains resources and tools for creating new tiled terrain models in ArcGIS TIN format.  The <b>Clip Terrain Combo</b> tool can be used to create a rectangular terrain model coverng any area within the Metro3D tile boundary.  To assure that your model extends to the corners, you should snap the corners of your clip rectangle to points in the <b>Metro3D_Tile_Pts</b> feature class. 
        </p>  
-      <div class="procedure">
+      <div class="feature procedure">
        <h3>To Use:</h3>
           <ol>
             <li>Clone the workspace from git-hub <a href="https://github.com/CitySchema/Modular-Terrain">CitySchema/Modular-Terrain</a>Repository.
